MRO builds on linux now (needs hack to conda-build so that outputs/script still get run when build/always_include_files is set:
diff --git a/conda_build/build.py b/conda_build/build.py
index fc1446b6..d7aeb72f 100644
--- a/conda_build/build.py
+++ b/conda_build/build.py
@@ -721,7 +721,7 @@ def bundle_conda(output, metadata, env, **kw):
     except OSError:
         pass

-    if not files:
+    if not files or metadata.get_value('build/always_include_files'):
         if output.get('script'):
             with utils.path_prepended(metadata.config.build_prefix):
                 env = environ.get_dict(config=metadata.config, m=metadata)

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -272,7 +272,9 @@ outputs:
       rpaths:
         - lib/R/lib/
         - lib/
-    
+      always_include_files:
+        - lib/libRblas.so  # [linux]
+
     requirements:
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
