--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -27,13 +27,16 @@ source:
 requirements:
   build:
     - python-libarchive-c
-  host:
     - m2w64-toolchain  # [win]
+    - m2-base  # [win]
 
 outputs:
   - name: mro-base
     version: {{ version }}
     script: install-mro-base.sh
+    requirements:
+      build:
+        - m2-base  # [win]
 
   - name: r-kernsmooth
     version: 2.23_15
@@ -45,6 +48,8 @@ outputs:
         - lib/
     # Suggests: MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -74,6 +79,8 @@ outputs:
         - lib/
     # Suggests: lattice, nlme, nnet, survival
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -102,6 +109,8 @@ outputs:
         - lib/
     # Suggests: expm, MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-lattice', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
@@ -132,6 +141,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -159,6 +170,8 @@ outputs:
         - lib/
     # Suggests: knitr, microbenchmark, pryr, testthat, ggplot2, scales
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -190,6 +203,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -218,6 +233,8 @@ outputs:
         - lib/
     # Suggests: RevoUtils
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-runit', min_pin='0.4.26', max_pin=None) }}
@@ -247,6 +264,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -276,6 +295,8 @@ outputs:
         - lib/libRblas.so  # [linux]
 
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -303,6 +324,8 @@ outputs:
         - lib/
     # Suggests: MASS, survival
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -332,6 +355,8 @@ outputs:
         - lib/
     # Suggests: knitr, rmarkdown, testthat(>= 0.9), MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -370,6 +395,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-mass', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
@@ -400,6 +427,8 @@ outputs:
         - lib/
     # Suggests: MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -429,6 +458,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -456,6 +487,8 @@ outputs:
         - lib/
     # Suggests: testthat (>= 1.0.0), knitr, jsonlite, rmarkdown, magrittr, httpuv, webutils
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -490,6 +523,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -522,6 +557,8 @@ outputs:
         - lib/
     # Suggests: caret, mlbench, rpart
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-foreach', min_pin='1.2.0', max_pin=None) }}
@@ -553,6 +590,8 @@ outputs:
         - lib/
     # Suggests: randomForest
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-codetools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
@@ -589,6 +628,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -617,6 +658,8 @@ outputs:
         - lib/
     # Suggests: RUnit
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -645,6 +688,8 @@ outputs:
         - lib/
     # Suggests: httr, curl, plyr, testthat, knitr, rmarkdown, R.rsp, sp
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -680,6 +725,8 @@ outputs:
         - lib/
     # Suggests: KernSmooth, MASS, latticeExtra
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -710,6 +757,8 @@ outputs:
         - lib/
     # Suggests: splines, parallel, survival, MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-matrix', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
@@ -743,6 +792,8 @@ outputs:
         - lib/
     # Suggests: Hmisc, MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-lattice', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
@@ -772,6 +823,8 @@ outputs:
         - lib/
     # Suggests: MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -800,6 +853,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -828,6 +883,8 @@ outputs:
         - lib/
     # Suggests: survival
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -857,6 +914,8 @@ outputs:
         - lib/
     # Suggests: MASS
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
       run:
@@ -884,6 +943,8 @@ outputs:
         - lib/
     
     requirements:
+      build:
+        - m2-base  # [win]
       host:
         - {{ pin_subpackage('mro-base', min_pin='3.4.1', max_pin='3.4.1') }}
         - {{ pin_subpackage('r-matrix', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}
