MKL now in RevoUtilsMath only
Still need to rename libRblas.so to libRblas.so.mkl and add
post-link and post-unlink scripts to swap it with the GPL libRblas.so

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -306,7 +306,7 @@ outputs:
         - lib/R/lib/
         - lib/
       always_include_files:
-        - lib/libRblas.so  # [linux]
+        - lib/R/lib/libRblas.so  # [linux]
 
     requirements:
       build:
