Not sure about this one

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -30,6 +30,8 @@ source:
 requirements:
   build:
     - python-libarchive-c
+    - posix
+  host:
     - m2w64-toolchain  # [win]
     - m2-base  # [win]
 
